2009-02-25  Li Yuan  <li.yuan@sun.com>

	* gailtreeview.c: (is_cell_showing):
	Bug #571001. Set the cell's showing state based on bin_window
	coordinates.

2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.4 ===

2009-02-17  Li Yuan  <li.yuan@sun.com>

	* gailbutton.c: (idle_do_action):
	Bug #561631. Use g_queue_get_length to determine if a queue is empty.

2009-02-04  Tor Lillqvist  <tml@novell.com>

	Bug 570406 - gailutil.def is in srcdir, but used from builddir

	* libgail-util/Makefile.am: Use gailutil.def from srcdir. Drop
	useless rules to install/uninstall import libraries, libtool knows
	to install / uninstall them itself when installing / uninstalling
	a .la file. Add rules to install / uninstall the def file like for
	consistency, like with the other libraries in GTK+.

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.3 ===

2009-01-27  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.2 ===

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.1 ===

2009-01-07  Brad Taylor  <brad@getcoded.net>

	* gail.c: 
	Bug #565110 – Add an env variable to disable Gail.

2009-01-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.0 ===

2008-12-21  Tor Lillqvist  <tml@novell.com>

	* gaillabel.c: #undef GTK_DISABLE_DEPRECATED here, too, to get
	GTK_IS_COMBO.

2008-12-15  Li Yuan  <li.yuan@sun.com>

	* gailitem.c:
	Bug #564555.  #undef GTK_DISABLE_DEPRECATED where we need to access
	deprecated symbols.

2008-12-12  Li Yuan  <li.yuan@sun.com>

	* gailtreeview.c: Bug #512743.
	(gail_tree_view_changed_gtk): Clean cell before go through the info
	list, for "changed" signal could come before a "row-deleted".
	(clean_cell_info):
	Prevent the thread to be scheduled before clean_cell_info
	finish its job.

2008-12-09  Michael Natterer  <mitch@imendio.com>

	* Makefile.am
	* tests/Makefile.am: add GTK_DISABLE_DEPRECATED to CFLAGS.

	* gail.c
	* gailclist.c
	* gailclistcell.c
	* gailcombo.c